@@ -1,5 +1,9 @@
 2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: made some small adjustments to devicechecks.
+
+2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: sort devices alphabetically by default.
 
 2006-03-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
